# VIBE

./: .gitignore  README.md  RoPE.py  adjaceny_matrices.py  config.py  data.py  losses.py  main.py  make_submission.py  model.py  normalization_stats.pt  pyproject.toml  requirements.txt  train.py  utils.py  viz.py
.github/workflows/: ruff.yaml
algonauts/: __init__.py
algonauts/cli/: __init__.py  ensemble_of_ensembles.py  fit.py  generate_loss_masks.py  make_submission.py  merging.py  retrain.py  shapley.py  submit.py  train.py  visualize_life_hidden.py
algonauts/data/: __init__.py  data.py  loader.py
algonauts/features/: novelty.py
algonauts/features/BEATs-Feature-Extraction/: extract_audio_BEATs.py  pyproject.toml
algonauts/features/LaBSE/: extract_labse.py
algonauts/features/VJEPA2/: get_vjepa_ac_features.py
algonauts/features/audio/: mtf.py
algonauts/features/omar-music/: extract_features.py  main.py  pyproject.toml  slurm.sh
algonauts/features/omni_and_slowfast/: extract_audio_features_whisperV3.py  extract_omni7B_features.py  extract_omni_features.py  extract_slowfast_r101_features.py  omni_3B_longer_context.py  pyproject.toml  slurm.sh  slurm_omni_longer_context.sh  (+1 more)
algonauts/models/: __init__.py  ensemble.py  fmri.py  graph_models.py  mla.py  rope.py  rope_gat.py  utils.py
algonauts/training/: __init__.py  loop.py  losses.py  optim.py
algonauts/utils/: __init__.py  adjacency_matrices.py  config.py  feature_analysis.py  logger.py  utils.py  viz.py
config/: features.yaml  local.yaml  local_sample.yaml  params.yaml  sweep.yaml
configs/: features.yaml  features_Default.yaml  features_Vis.yaml  features_model1_noqwen.yaml  merge_plan.yaml  merge_plan_ood.yaml  merge_plan_s07.yaml  params.yaml  params_Default.yaml  params_DorsAttn.yaml  params_SomMot.yaml  params_Vis.yaml  params_default.yaml  params_model1_fr.yaml  params_visual.yaml  sweep.yaml  sweep_mla.yaml
feature_extraction/: extract_mono_stereo_features.py
feature_extraction/omni_and_slowfast/: extract_omni_features.py
many/Figures/: roi_table_sub-01.csv  roi_table_sub-02.csv  roi_table_sub-03.csv  roi_table_sub-05.csv
notebooks/: notebook.sh  test_data.ipynb  test_decoder.ipynb  test_features.ipynb  test_labse.ipynb  test_roi_ensemble.ipynb  test_transl.ipynb  test_viz.ipynb
scripts/: env.sh.example  extract_gabor.sh  extract_mtf.sh  extract_ps.sh  fit.sh  fit_all.sh  merge_all.sh  retrain.sh  setup_env.sh  shapley.sh  submission.sh  submit.sh  sweep.sh  train.sh
shap_ood1/shapley_256_permutations_6_batches_8_batchsize_9b5jyq3k/: shapley_modes.csv
shap_ood1/shapley_32_permutations_submission_9b5jyq3k/: shapley_modes.csv
tests/: adjacency_matrices.py  adjacency_matrices_old.py  mock_en.tsv  mock_fr.tsv  test_adj_mat.py  test_data.py  test_loader.py
tests/ref/: ref_data.py  ref_loader.py
vibe/cli/: fit.py  merging.py  retrain.py  submit.py  train.py
vibe/dataset/: loader.py
(+9 files in other folders)
