[project]
name = "algonauts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "captum>=0.8.0",
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "labml-nn>=0.4.137",
    "matplotlib>=3.10.1",
    "nilearn>=0.10.4",
    "numpy==1.23.5",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers>=4.53.1",
    "wandb>=0.19.9",
]

[tool.setuptools]
packages = ["algonauts"]

[tool.uv.workspace]
members = ["algonauts/features/BEATs-Feature-Extraction"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.4",
]

[project.scripts]
algonauts-train   = "algonauts.cli.train:main"
algonauts-retrain = "algonauts.cli.retrain:main"
algonauts-fit     = "algonauts.cli.fit:main"
algonauts-submit  = "algonauts.cli.submit:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
